Fix table on mobile

--- a/src/css/imports/_why-visyond.css
+++ b/src/css/imports/_why-visyond.css
@@ -95,7 +95,6 @@
       & tr td:nth-child(3) {
         width: 33% !important;
         overflow: hidden;
-        word-break: break-word;
         font-size: 12px;
       }
     }
